<resources>
    <string name="app_name">MotionDroid</string>
    <string name="action_settings">Settings</string>
    <string name="prefs_name">org.kraflapps.motiondroid.prefs</string>
    <string name="camera_id_key">cameraId</string>
    <string name="camera_permissions_not_granted">Camera permissions not granted</string>
    <string name="pref_folder">Save destination</string>
    <string name="pref_capacity">Max capacity</string>
    <string name="pref_overwrite">Overwrite policy</string>
    <string name="title_activity_settings">Settings</string>
    <string name="default_dir_name">motion</string>
    <string name="pref_folder_key">pref_folder_key</string>
    <string name="pref_capacity_key">pref_capacity_key</string>
    <string name="pref_overwrite_key">pref_overwrite_key</string>
    <string name="motion_service_is_running">showing whether motion service is running</string>
    <string name="widget_text">MotionDroid</string>
    <string name="widget_running">Running</string>
    <string name="widget_start">Start</string>
    <string name="last_image_preview">Last image preview</string>
    <string name="start_or_stop_the_motion_service">Start or stop the motion service</string>
    <string name="default_folder_name">motion</string>
</resources>
