<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <Preference
        android:key="@string/pref_folder_key"
        android:title="@string/pref_folder"
        android:summary="@string/pref_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditTextPreference
        android:key="@string/pref_capacity_key"
        android:title="@string/pref_capacity"
        android:summary="@string/pref_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:defaultValue="100"/>
    <ListPreference
        android:key="@string/pref_overwrite_key"
        android:title="@string/pref_overwrite"
        android:summary="@string/pref_overwrite"
        android:entries="@array/pref_overwrite"
        android:entryValues="@array/pref_overwrite_values"
        android:defaultValue="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</PreferenceScreen>